# voms-oracle-plugin

./: .gitignore  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  build.xml  configure  configure.ac
config/: Makefile.am  Makefile.in  voms-oracle.data
m4/: acinclude.m4  oracle-instantclient.m4
project/: acinclude.m4  build.number  build.properties  configure.properties.xml  oracle-instantclient.m4  properties.xml  runtime.dependencies  version.properties
spec/: voms-oracle-plugin.spec  voms-oracle-plugin.spec.in
src/: Makefile.am  Makefile.in  dbwrap.h  middleman.cc  ociwrap.cpp  ociwrap.hpp  oraclewrap.cc  oraclewrap.h
src/autogen/: config.h.in
